Remove references to CaaS from the code

--- a/imagebuilder-github-runner-ami/files/imagebuilder_component_docker_images.yaml
+++ b/imagebuilder-github-runner-ami/files/imagebuilder_component_docker_images.yaml
@@ -1,5 +1,5 @@
-name: install caas docker images
-description: Downloads the latest CaaS docker images so they are cached before any jobs run
+name: install docker images
+description: Downloads the latest docker images so they are cached before any jobs run
 schemaVersion: 1.0
 phases:
   - name: build
