--- a/imagebuilder-github-runner-ami/.terraform-docs.yml
+++ b/imagebuilder-github-runner-ami/.terraform-docs.yml
@@ -11,7 +11,41 @@ sections:
   show: []
 
 content: |-
-  ## imagebuilder-github-runner-ami
+  ## imagebuilder-github-runner-ami Module
+
+  ### Simplest Possible Example
+  This is an imagebuilder pipeline to generate a GitHub Runner AMI using default values for everything.
+
+  ```terraform
+  module "imagebuilder_github_runner_ami_simple" {
+    source = "git::https://github.com/mtonxbjss/ghrunner.git//imagebuilder-github-runner-ami"
+
+    ami_build_pipeline_cron_expression = "cron(0 4 ? * MON *)"
+    ami_version_number                 = "1.0.0"
+
+    github_job_image_ecr_account_id      = var.aws_account_id
+    github_job_image_ecr_repository_name = aws_ecr_repository.terraform.name
+    github_runner_binary_version         = "2.299.2"
+
+    imagebuilder_ec2_subnet_id = module.vpc.private_subnets[0]
+    imagebuilder_ec2_vpc_id    = module.vpc.vpc_id
+
+    imagebuilder_log_bucket_encryption_key_arn = aws_kms_key.cicd.arn
+    imagebuilder_log_bucket_name               = aws_s3_bucket.cicd.bucket
+    imagebuilder_log_bucket_path               = "github-runner/ami-logs/github"
+
+    iam_roles_with_admin_access_to_created_resources = [
+      local.identifiers.account_admin_role_arn,
+    ]
+
+    region            = var.region
+    runner_account_id = var.aws_account_id
+    unique_prefix     = "${local.prefix}-simple"
+  }
+  ```
+
+  ### Full Worked Example with All Parameters Expressed
+  This is an imagebuilder pipeline to generate a GitHub Runner AMI overriding default values
 
   ```terraform
 
