Update docs to include ecr image version tags

--- a/imagebuilder-github-runner-ami/.terraform-docs.yml
+++ b/imagebuilder-github-runner-ami/.terraform-docs.yml
@@ -76,7 +76,7 @@ content: |-
     ami_version_number                 = "1.0.0"
 
     github_job_image_ecr_account_id       = var.aws_account_id
-    github_job_image_ecr_repository_names = [ aws_ecr_repository.terraform.name ]
+    github_job_image_ecr_repository_names = [ "${aws_ecr_repository.terraform.name}:latest" ]
     github_runner_binary_version          = "2.299.2"
 
     imagebuilder_ec2_encryption                 = "CMK"
