Add pwgen to the list of standard tools in the terraform image

--- a/imagebuilder-terraform-container/files/imagebuilder_component_common_packages.yaml
+++ b/imagebuilder-terraform-container/files/imagebuilder_component_common_packages.yaml
@@ -22,6 +22,7 @@ phases:
                 curl \
                 git \
                 jq \
+                pwgen \
                 tree \
                 unzip \
                 vim \
