Add pwgen to github AMI

--- a/imagebuilder-github-runner-ami/files/imagebuilder_component_common_packages.yaml
+++ b/imagebuilder-github-runner-ami/files/imagebuilder_component_common_packages.yaml
@@ -27,6 +27,7 @@ phases:
                 iputils-ping \
                 jq \
                 lsb-release \
+                pwgen \
                 tree \
                 unzip \
                 vim \
